# telegram-aiml-bot-docker

./: .gitignore  Dockerfile  README.rst  deployment.yaml  docker-compose.yml  pyproject.toml  requirements.txt  sample.config.env  sample.env
AIML/: standard.brn  std-startup.xml
telegram_aiml_bot/: aiml_bot.py  settings.py
tests/: test_telegram_aiml_bot.py
